# ai-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/ai-memory-cli/: Cargo.toml
crates/ai-memory-cli/src/: auth_bearer.rs  cli.rs  config.rs  main.rs  process_guard.rs
crates/ai-memory-cli/templates/: config.default.toml
crates/ai-memory-cli/tests/: install_instructions.rs  packaging.rs  routing_instructions.rs  uninstall.rs
crates/ai-memory-consolidate/prompts/: batch_consolidate_system.md  bootstrap_system.md  lint_system.md  single_consolidate_system.md
crates/ai-memory-consolidate/src/: auto_improve.rs  bootstrap.rs  consolidator.rs  lib.rs  lint.rs
crates/ai-memory-core/src/: actor.rs  ids.rs  lib.rs  routing_snippet.rs
crates/ai-memory-hooks/src/: lib.rs  payload.rs  router.rs  synth.rs
crates/ai-memory-llm/src/: factory.rs  openai.rs  openai_compat.rs
crates/ai-memory-mcp/src/: actor.rs  admin.rs  server.rs
crates/ai-memory-mcp/tests/: admin_backup.rs  admin_bootstrap.rs  admin_move.rs  admin_phase3.rs  admin_purge.rs  admin_read_page.rs  (+5 more)
crates/ai-memory-wiki/: Cargo.toml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  admission-webhooks.md  auto-improvement-loop.md  auto-scope.md  deploy.md  design-decisions.md  frontend-api.md  https-via-proxy.md  install.md  lifecycle-ops.md  llm-provider-comparison.md  marker-file.md  mcp-install.md  prior-art-implementation-findings.md  usage.md  users.md  windows.md
evals/: Cargo.toml  README.md
evals/src/: main.rs
(+37 files in other folders)
