[package]
name = "ai-memory-eval"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "ai-memory-eval"
path = "src/main.rs"

[dependencies]
ai-memory-core.workspace = true
ai-memory-llm.workspace = true
ai-memory-consolidate.workspace = true

anyhow.workspace = true
clap.workspace = true
jiff.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
